syntax = "proto3";

option csharp_namespace = "CartageServer";

package cartage;

// The greeting service definition.
service Cartage {
	// Sends a greeting
	rpc GetCartage (CartageRequest) returns (CartageReply);
}

// The request message containing the user's name.
message CartageRequest {
	string id = 1;
}

// The response message containing the greetings.
message CartageReply {
	string message = 1;
}